# loanguard

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: drift_monitor.joblib  feature_builder.joblib  model_autoencoder.joblib  model_catboost.joblib  model_ensemble.joblib  model_isolation_forest.joblib  model_lightgbm.joblib  model_xgboost.joblib  results.json  test_predictions.csv
config/: config.yaml
docker/: .dockerignore  Dockerfile  docker-compose.yml  prometheus.yml
docs/: architecture.md  data_card.md  decisions.md  model_card.md
notebooks/: 01_EDA.ipynb  02_Modeling.ipynb  03_Interview_Narrative.ipynb
scripts/: download_data.py  score.py  smoke_test.py  train.py
src/: __init__.py
src/api/: main.py  schemas.py  service.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  labels.py  loader.py  splitter.py  validation.py
src/evaluation/: __init__.py  business.py  explainability.py  fairness.py  metrics.py
src/features/: __init__.py  behavioral.py  builder.py  encoders.py  graph_features.py  velocity.py
src/models/: __init__.py  autoencoder.py  base.py  catboost_model.py  ensemble.py  isolation_forest_model.py  lgbm_model.py  xgb_model.py
src/monitoring/: __init__.py  drift.py
src/training/: __init__.py  trainer.py  tuner.py
src/utils/: config.py  io.py  logging.py
tests/: conftest.py  test_api.py  test_data.py  test_evaluation.py  test_features.py  test_models.py
